# compare-version

./: Cargo.toml  README.md  readme.md
sh/: init.sh
src/: cfg.rs  compare.rs  enum.rs  error.rs  fn.rs  impl.rs  lib.rs  struct.rs  test.rs  type.rs
src/compare_version/: enum.rs  error.rs  impl.rs  mod.rs  struct.rs
tests/: mod.rs
tests/version/: fn.rs
