[package]
name = "compare_version"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A Rust library for comparing semantic versioning strings and checking version compatibility."
keywords = ["version", "comparison", "semver", "rust"]
repository = "https://github.com/ltpp-universe/compare_version"
categories = ["algorithms", "development-tools", "rust-patterns"]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"